Closed
Bug 64052
Opened 25 years ago
Closed 24 years ago
[tabbing] prefs: some non-control is in the tab order between Cancel and panel items
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P4)
Core
DOM: UI Events & Focus Handling
Tracking
()
VERIFIED
FIXED
mozilla0.9.6
People
(Reporter: jruderman, Assigned: bryner)
References
(Blocks 1 open bug)
Details
(Keywords: access, helpwanted)
Attachments
(1 file)
|
690 bytes,
patch
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Open preferences.
The Category tree should have focus, but it doesn't. I can't tell what does
have focus.
2. Tab over to Cancel and then press tab again.
Same thing happens again.
| Reporter | ||
Comment 1•25 years ago
|
||
Also in the new Form Manager dialog.
nav triage team:
Marking p3, nsbeta1+, and why does matt have this one?
Priority: -- → P3
Whiteboard: nsbeta1+
nav triage team:
Putting on the backburner, removing nsbeta1+, marking p4 and future
Priority: P3 → P4
Whiteboard: nsbeta1+
Target Milestone: --- → Future
Updated•25 years ago
|
Keywords: helpwanted
Updated•24 years ago
|
Comment 5•24 years ago
|
||
nav triage: not required for general market acceptance hence catfood-.
Keywords: nsCatFood → nsCatFood-
Comment 7•24 years ago
|
||
as with bug 64150, i'm renominating this as catfood :) --this is an annoying
accessibility issue for the preferences dialog.
| Reporter | ||
Comment 8•24 years ago
|
||
The tab order has changed, so updating summary from
prefs: some non-control is in the tab order before Category tree
to
prefs: some non-control is in the tab order between Cancel and panel items.
Summary: prefs: some non-control is in the tab order before Category tree → prefs: some non-control is in the tab order between Cancel and panel items
Keywords: nsCatFood → nsCatFood-
Comment 9•24 years ago
|
||
renominating, and cc'ing jeremy loeb --this is the "tab puts you into lala
land". see also bug 77913.
perhaps this should go to bryner?
Comment 10•24 years ago
|
||
nav triage team:
Minus, minus, minus. Yes, we know it sucks. Yes, we know it affects keyboard
accessability. Unfortunately, we don't have resources to get this done in a
timely manner. nsbeta1- and nsCatFood-
Comment 11•24 years ago
|
||
okay. over to aaronl to see if either he or someone he knows could tackle this
(cannot hurt to check :).
Assignee: mcafee → aaronl
Updated•24 years ago
|
Target Milestone: Future → mozilla0.9.3
Updated•24 years ago
|
Target Milestone: mozilla0.9.3 → mozilla0.9.4
| Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Summary: prefs: some non-control is in the tab order between Cancel and panel items → [tabbing] prefs: some non-control is in the tab order between Cancel and panel items
| Assignee | ||
Comment 13•24 years ago
|
||
moving these out to 0.9.5 since it doesn't look like I will have time for 0.9.4.
Target Milestone: mozilla0.9.4 → mozilla0.9.5
| Assignee | ||
Comment 14•24 years ago
|
||
Ok, I have a patch to fix the issue where the chrome document was getting focus
after the last button (which is now Help). It does not fix the initial focus in
the prefs dialog, that should be a separate bug.
| Assignee | ||
Comment 15•24 years ago
|
||
Comment 16•24 years ago
|
||
Note that this bug applies to all dialogs in Mozilla (at least on Linux):
Preferences, Find in Page, Open Web Location, Open File, File Bookmark,
Print, all sorts of confirmation dialogs etc...
There is always a "dead spot" in the tab order after the last element.
Comment 17•24 years ago
|
||
Will this also fix the focus disapearing in Navigator? Focus there goes:
URL bar -> [dead] -> page (links, form elements) -> [dead, but arrows can scroll]
| Assignee | ||
Comment 18•24 years ago
|
||
This will fix the first [dead] in your list. The second one is the entire
document having focus, there is no plan to remove that.
| Reporter | ||
Comment 19•24 years ago
|
||
Bryner is right, the second "dead" is the document having focus. The problem
there is that the document is in the wrong part of the tab cycle (should be
before the page elements, not after them).
Comment 20•24 years ago
|
||
Mass-moving lower-priority 0.9.5 bugs off to 0.9.6 to make way for remaining
0.9.4/eMojo bugs, and MachV planning, performance and feature work. If you
disagree with any of these targets, please let me know.
Target Milestone: mozilla0.9.5 → mozilla0.9.6
Comment 21•24 years ago
|
||
r=saari
Comment 22•24 years ago
|
||
sr=hyatt
| Assignee | ||
Comment 23•24 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 24•24 years ago
|
||
[shift]+tab now works in the Prefs, without dead spots.
here's the cycle for tab, upon opening the Prefs dialog:
1. focus is on the category item
2. 1st tab goes to the 1st widget in the panel --subsequent tabs go through the
rest of the widgets...
3. ...then tab goes thru the OK, Cancel and Help buttons: the displayed order is
platform dependent, but focus moves from the leftmost to the rightmost of these
buttons.
and, for shift+tab, the 1st tab will take me from the focused category item to
the rightmost of the OK/Cancel/Help buttons.
vrfy'ing fixed:
linux - 2001.11.01.12
winNT - 2001.10.31.03
mac 10.1 - 2001.10.31.13
Status: RESOLVED → VERIFIED
Updated•7 years ago
|
Component: Keyboard: Navigation → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•