Bug 64052 - don't allow chrome documents to take focus via tabbing.  r=saari, sr=hyatt.